userController updated
